force-app/main/default/objects/Article__c/fields/Article_Number__c.field-meta.xml
<CustomField>
    <fullName>Article_Number__c</fullName>
    <displayFormat>Article-{000000}</displayFormat>
    <label>Article Number</label>
    <type>AutoNumber</type>
</CustomField>