force-app/main/default/objects/Article__c/fields/Date_Published__c.field-meta.xml
<CustomField>
    <fullName>Date_Published__c</fullName>
    <description>The date this article was originally published</description>
    <inlineHelpText>The date this article was originally published</inlineHelpText>
    <label>Date Published</label>
    <type>Date</type>
</CustomField>