force-app/main/default/objects/Article__c/fields/Publication__c.field-meta.xml
<CustomField>
    <fullName>Publication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The collection of articles that this record belongs to</description>
    <inlineHelpText>The collection of articles that this record belongs to</inlineHelpText>
    <label>Publication</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Articles</relationshipLabel>
    <relationshipName>Articles</relationshipName>
    <type>Lookup</type>
</CustomField>