force-app/main/default/objects/Article__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which this article should appear when part of a publication</description>
    <inlineHelpText>The order in which this article should appear when part of a publication</inlineHelpText>
    <label>Sort Order</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>