force-app/main/default/objects/Article__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Author__c</columns>
    <columns>Publication__c</columns>
    <columns>Status__c</columns>
    <columns>Date_Published__c</columns>
    <columns>Article_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>